--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.3.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.5",
     "socket.io": "^4.7.0"
   },
   "devDependencies": {
