--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "sharp": "^0.34.5",
     "socket.io": "^4.7.5",
     "xss-clean": "^0.1.4"
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "^9.13.0",
