--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.34.5",
     "socket.io": "^4.7.5",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
     "exceljs": "^4.4.0"
   },
   "devDependencies": {
